--- a/tests/files/millenium_patron/dump.two_barcodes.html
+++ b/tests/files/millenium_patron/dump.two_barcodes.html
@@ -33,8 +33,8 @@ LANG PREF[p263]=eng<BR>
 NOTICE PREF[p268]=z<BR>
 PATRN NAME[pn]=SHELDON, ALICE<BR>
 ADDRESS[pa]=111 MAIN STREET$NEW YORK, NY 10001<BR>
-P BARCODE[pb]=FIRST_barcode<BR>
-P BARCODE[pb]=SECOND_barcode<BR>
+P BARCODE[pb]=FIRST-barcode<BR>
+P BARCODE[pb]=SECOND-barcode<BR>
 ALT ID[pu]=alice<BR>
 NOTE[px]=Mon Mar Apr 10 2012: $49.25 paid by .p6666666<BR>
 NOTE[px]=CARD44444444444446REPORTEDLOST SAS GRD 7/23/14<BR>
